# libcparse

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake
cmake/Modules/: Findminunit.cmake
examples/: CMakeLists.txt
examples/comment_strip/: CMakeLists.txt
examples/slowcat/: CMakeLists.txt  README.md
examples/syntax_highlight/: CMakeLists.txt
include/libcparse/: abstract_parser.h  abstract_parser_fwd.h  comment_filter.h  comment_scanner.h  cursor.h  event.h  event_copy.h  event_fwd.h  event_handler.h  event_handler_fwd.h  event_reactor.h  event_reactor_fwd.h  event_type.h  file_position_cache.h  function_decl.h  input_stream.h  input_stream_fwd.h  integer_type.h  line_wrap_filter.h  macro_tricks.h  message.h  message_fwd.h  message_handler.h  message_handler_fwd.h  message_type.h  newline_preserving_whitespace_filter.h  preprocessor_control_scanner.h  preprocessor_scanner.h  preproclexer.h  raw_file_line_override_filter.h  raw_stack_scanner.h  status_codes.h  string_builder.h  string_utils.h
src/abstract_parser/: abstract_parser_comment_filter_subscribe.c  abstract_parser_comment_scanner_subscribe.c  abstract_parser_dispose.c  abstract_parser_file_line_override.c  abstract_parser_init.c  abstract_parser_line_wrap_filter_subscribe.c  abstract_parser_message_handler_get.c  abstract_parser_message_handler_override.c  abstract_parser_newline_preserving_whitespace_filter_subscribe.c  abstract_parser_preprocessor_scanner_subscribe.c  abstract_parser_push_input_stream.c  abstract_parser_raw_file_line_override_filter_subscribe.c  abstract_parser_raw_stack_scanner_subscribe.c  abstract_parser_run.c  stub.c
src/comment_filter/: comment_filter_cached_file_clear.c  comment_filter_cached_file_position_set.c  comment_filter_create.c  comment_filter_event_callback.c  comment_filter_internal.h  comment_filter_message_callback.c  comment_filter_release.c  comment_filter_upcast.c  stub.c
src/comment_scanner/: comment_scanner_cached_file_clear.c  comment_scanner_cached_file_position_set.c  comment_scanner_create.c  comment_scanner_event_callback.c  comment_scanner_internal.h  comment_scanner_message_callback.c  comment_scanner_release.c  comment_scanner_upcast.c  stub.c
src/event/: event_dispose.c  event_downcast_to_event_identifier.c  event_downcast_to_event_include.c  event_downcast_to_event_integer_token.c  event_downcast_to_event_raw_character.c  event_downcast_to_event_raw_character_literal.c  event_downcast_to_event_raw_float_token.c  event_downcast_to_event_raw_integer_token.c  event_downcast_to_event_raw_string_token.c  event_downcast_to_event_string.c  event_get_category.c  event_get_cursor.c  event_get_type.c  event_identifier_dispose.c  event_identifier_get.c  event_identifier_init.c  event_identifier_upcast.c  event_include_dispose.c  event_include_file_get.c  event_include_init.c  event_include_init_for_local_include.c  event_include_init_for_system_include.c  event_include_internal.h  event_include_upcast.c  event_init.c  event_init_for_comment_block_begin.c  event_init_for_comment_block_end.c  event_init_for_comment_line_begin.c  event_init_for_comment_line_end.c  event_init_for_eof.c  event_init_for_exp_add_begin.c  event_init_for_exp_add_end.c  event_init_for_exp_alignof_type_begin.c  event_init_for_exp_alignof_type_end.c  event_init_for_exp_array_subscript_begin.c  event_init_for_exp_array_subscript_end.c  event_init_for_exp_arrow_member_deref_begin.c  event_init_for_exp_arrow_member_deref_end.c  event_init_for_exp_assignment_begin.c  event_init_for_exp_assignment_end.c  (+256 more)
src/event_copy/: event_copy_create.c  event_copy_get_event.c  event_copy_internal.h  event_copy_release.c  stub.c
src/event_handler/: event_handler_dispose.c  event_handler_init.c  event_handler_init_copy.c  event_handler_send.c
src/event_reactor/: event_reactor_add.c  event_reactor_broadcast.c  event_reactor_create.c  event_reactor_internal.h  event_reactor_release.c  stub.c
src/file_position_cache/: file_position_cache_clear.c  file_position_cache_create.c  file_position_cache_file_get.c  file_position_cache_final_newline_token_broadcast.c  file_position_cache_generic_event_broadcast.c  file_position_cache_internal.h  file_position_cache_newline_token_broadcast.c  file_position_cache_newline_token_broadcast_internal.c  file_position_cache_position_extend.c  file_position_cache_position_get.c  file_position_cache_raw_character_broadcast.c  file_position_cache_release.c  file_position_cache_set.c  file_position_cache_whitespace_token_broadcast.c  stub.c
src/input_stream/: input_stream_create_from_descriptor.c  input_stream_create_from_string.c  input_stream_from_descriptor_read.c  input_stream_from_descriptor_release.c  input_stream_from_string_read.c  input_stream_from_string_release.c  input_stream_internal.h  input_stream_read.c  input_stream_release.c  stub.c
src/line_wrap_filter/: line_wrap_filter_create.c  line_wrap_filter_event_callback.c  line_wrap_filter_internal.h  line_wrap_filter_message_callback.c  line_wrap_filter_release.c  line_wrap_filter_upcast.c  stub.c
src/message/: message_dispose.c  message_downcast_to_message_file_line_override.c  message_downcast_to_message_rss_add_input_stream.c  message_downcast_to_message_subscribe.c  message_file_line_override_dispose.c  message_file_line_override_file_get.c  message_file_line_override_init.c  message_file_line_override_line_get.c  message_file_line_override_upcast.c  message_get_type.c  message_init.c  message_internal.h  message_rss_add_input_stream_dispose.c  message_rss_add_input_stream_filename_get.c  message_rss_add_input_stream_init.c  message_rss_add_input_stream_upcast.c  message_rss_add_input_stream_xfer.c  message_run_dispose.c  message_run_init.c  message_run_upcast.c  message_subscribe_dispose.c  message_subscribe_event_handler_get.c  message_subscribe_init.c  message_subscribe_init_for_comment_filter.c  message_subscribe_init_for_comment_scanner.c  message_subscribe_init_for_line_wrap_filter.c  message_subscribe_init_for_nl_ws_filter.c  message_subscribe_upcast.c  stub.c  (+4 more)
tools/: CMakeLists.txt
(+147 files in other folders)
